--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,11 +27,20 @@ spec:
         image: akspipeline.azurecr.io/nginx/nginx:latest
         ports:
         - containerPort: 80
+    #    readinessProbe:
+    #      httpGet:
+    #        path: /
+    #        port: 80
+    #      periodSeconds: 60
+    #      timeoutSeconds: 10
+    #    env:
+    #    - name: TITLE
+    #      value: "Welcome to Azure Kubernetes Service (AKS)"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-jenk  
+  name: nginx-jenk
 spec:
   type: ClusterIP
   ports:
